<resources>
    <string name="app_name">Pay-track</string>
    <string name="app_subtitle">A Daily Money Tracking App</string>
    <string name="developer_name">Gaurav Mishra</string>
    <string name="developer_email">grvmishra788@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--MainActivity Tab names-->
    <string name="tab_transactions_name"><b>Transactions</b></string>
    <string name="tab_debts_name"><b>Debts</b></string>
    <string name="tab_categories_name"><b>Categories</b></string>
    <string name="tab_accounts_name"><b>Accounts</b></string>

    <!--Title-->
    <string name="title_add_account">Add Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="title_select_account">Select Account</string>
    <string name="title_add_debt">Add Debt</string>
    <string name="title_edit_debt">Edit Debt</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="title_select_parent_categories">Select Parent Category</string>
    <string name="title_select_categories">Select Category</string>
    <string name="title_transaction_message">Pending Messages</string>
    <string name="title_analyze">Analyze Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    
    <!--Preference Strings-->
    <string name="pref_key_date_format">prefDateFormat</string>
    <string name="pref_title_date_format">Default Date Format</string>
    <string name="pref_summary_date_format">Select the default date format</string>
	<string name="pref_key_date_sort">prefDateSort</string>
	<string name="pref_title_date_sort">Default Date Sort</string>
	<string name="pref_summary_date_sort">Select the default date sort type</string>
    <string name="pref_key_group_transactions">prefGroupTransaction</string>
    <string name="pref_title_group_transactions">Group transactions by</string>
    <string name="pref_summary_group_transactions">Select the filter to group transactions by</string>
    <string name="pref_key_default_group_transaction">prefDefaultGroupTransaction</string>
    <string name="pref_title_default_group_transaction">Default Transaction Group</string>
    <string name="pref_summary_default_group_transaction">Select the default group of transactions</string>
    <string name="pref_key_check_account">prefMatchAccount</string>
    <string name="pref_title_check_account">Account check in transaction messages</string>
    <string name="pref_summary_check_account">This option, when turned on, will add a SMS received to the pending messages activity only if it belongs to one of your added accounts.</string>
    <!--Preference strings not preset in settings fragment-->
    <string name = "pref_last_selected_category">Last Selected Category</string>
    <string name = "pref_last_selected_month">Last Selected Month</string>
    
    
    <!--Account Fields-->
    <string name="nick_name">Nick Name</string>
    <string name="type">Type</string>
    <string name="bank_name">Bank Name</string>
    <string name="service_name">Service Name</string>
    <string name="account_number">Account No.</string>
    <string name="email">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="balance">Balance</string>
    <string name="submit"><b>SUBMIT</b></string>

    <!--Category Fields-->
    <string name="category_name">Name</string>
    <string name="parent">Parent Category</string>
    
    <!--Transaction Message Fields-->
    <string name="sender">Sender</string>
    <string name="msg">Message</string>

    <!--Transaction Fields-->
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="account">Account</string>
    
    <!--Transaction Overview Fields-->
    <string name="overview">Overview</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>

    <!--Debt Fields-->
    <string name="person">Name Of The Person</string>
    <string name="lender">Lender</string>
    <string name="borrower">Borrower</string>
    
    <!--Analyze Fields-->
    <string name="filter">Filter Options</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <!--Default Options-->
    <string name="default_parent">None</string>
    <string name="default_category">None</string>
    <string name="default_account">None</string>


    <!--Account type choices-->
    <string-array name="account_type">
        <item>Bank Account</item>
        <item>Digital Account</item>
        <item>Cash Account</item>
    </string-array>

    <!--Transaction type choices-->
    <string-array name="transaction_type">
        <item>Debit</item>
        <item>Credit</item>
    </string-array>

    <!--Transaction type choices-->
    <string-array name="debt_type">
        <item>Pay</item>
        <item>Receive</item>
    </string-array>
    
    <!--Analyze filterBy choices-->
    <string-array name="analyze_filterBy">
        <item>By Month</item>
        <item>By Category</item>
    </string-array>
    
    <!--Import fields-->
    <string name = "location">Location</string>
    <string name = "show_guidelines">Show Guidelines</string>
    <string name = "hide_guidelines">Hide Guidelines</string>
    <string name = "import_rule_account_heading">The spreadsheet must be a .csv having following columns - </string>
    <string name = "import_rule_account_nickName">• <b>Nick_name</b> - <i>Having Not Null String</i> </string>
    <string name = "import_rule_account_type">• <b>Type</b> - <i>Having Value : \n\t <b>> 101</b> - if it is a bank account;\n\t <b>> 102</b> - if it is a service account; and \n\t <b>> 103</b> - if it is a cash account</i> </string>
    <string name = "import_rule_account_bankName">• <b>Bank_Name</b> - <i>Having Not Null String representing bank name only IF it is a Bank A/C ELSE Empty </i></string>
    <string name = "import_rule_account_serviceName">• <b>Service_Name</b> - <i>Having Not Null String representing service name only IF it is a Service A/C ELSE Empty </i></string>
    <string name = "import_rule_account_accountNo">• <b>Account_No</b> - <i>Having 8 digits or more representing the bank account number only IF it is a bank account ELSE Empty </i></string>
    <string name = "import_rule_account_email">• <b>Email</b> - <i>Having Not Null Email String only IF it is a service account or a bank account ELSE Empty </i></string>
    <string name = "import_rule_account_mobile">• <b>Mobile</b> - <i>Having Not Null String only IF it is a service account or a bank account ELSE Empty </i></string>
    <string name = "import_rule_account_balance">• <b>Balance</b> - <i>Either empty Or Having Real Number representing the balance in the A/C </i></string>
    
    <string name = "import_rule_category_heading">The spreadsheet must be a .csv having following columns - </string>
    <string name = "import_rule_category_categoryName">• <b>Category_Name</b> - <i>Having Not Null String</i> </string>
    <string name = "import_rule_category_accountNickName">• <b>Account_Name</b> - <i>Having Not Null String representing the account name, corresponding category is associated by default. The corresponding entry must be present in accounts table. </i></string>
    <string name = "import_rule_category_description">• <b>Description</b> - <i>Having String describing the category </i></string>
    
    <string name = "import_rule_sub_category_heading">The spreadsheet must be a .csv having following columns - </string>
    <string name = "import_rule_sub_category_categoryName">• <b>Sub_Category_Name</b> - <i>Having Not Null String</i> </string>
    <string name = "import_rule_sub_category_accountNickName">• <b>Account_Name</b> - <i>Having Not Null String representing the account name, the sub-category is associated by default. The corresponding entry must be present in Accounts list. </i></string>
    <string name = "import_rule_sub_category_description">• <b>Description</b> - <i>Having String describing the sub-category </i></string>
    <string name = "import_rule_sub_category_parent">• <b>Parent</b> - <i>Having Not Null String representing the parent category name, the sub-category is associated by default. The corresponding entry must be present in Categories list. </i></string>
    
    <string name = "import_rule_transaction_heading">The spreadsheet must be a .csv having following columns - </string>
    <string name = "import_rule_transaction_amount">• <b>Amount</b> - <i>Having Non-Zero Decimal representing the amount of the transaction.</i> </string>
    <string name = "import_rule_transaction_description">• <b>Description</b> - <i>Having String describing the transaction </i></string>
    <string name = "import_rule_transaction_category">• <b>Category</b> - <i>Having Not Null String representing category to which transaction belongs. The corresponding entry must be present in Categories list. </i></string>
    <string name = "import_rule_transaction_subCategory">• <b>SubCategory</b> - <i>Having String representing sub-category to which transaction belongs. The corresponding entry must be present in Sub-Categories list. </i></string>
    <string name = "import_rule_transaction_type">• <b>Type</b> - <i>Having Value : \n\t <b>> 0</b> - if it is DEBIT transaction; else\n\t <b>> 1</b> - if it is a CREDIT transaction</i> </string>
    <string name = "import_rule_transaction_date">• <b>Date</b> - <i>Having Not Null Date in the \'dd MM yyyy\' format, representing the date on which transaction was carried out. Ex - 19 03 2020 </i></string>
    <string name = "import_rule_transaction_account">• <b>Account</b> - <i>Having Not Null String representing the account name, the transaction is carried out with. The corresponding entry must be present in Accounts list. </i></string>
    
    <!--Errors-->
    <string name="title_general_error">Uh Oh..</string>
    <string name="error_duplicate_entry">You already have this entry in your database - </string>
    <string name="error_field_empty_account"> You must fill in the following fields - </string>
    <string name="error_cast_category_to_sub_category"> Can not cast this category to sub-category as it contains its own child sub-categories :( </string>

    <!--Fields Error-->
    <string name="error_field_account_no">An Account No. must contain only digits and should be at least 8 digits long !</string>
    <string name="error_field_balance">Balance should either be empty or a real number !</string>
    <string name="error_field_email">E-Mail input is not in proper format !</string>
    <string name="error_field_mobile">Mobile No. must be exactly 10 digits</string>
    <string name="error_field_amount">Amount must be a positive real number !</string>
    <string name = "error_field_category_name">Category name cannot have \'/\' character !</string>
    
    <!--Button titles-->
    <string name="button_ok"><b>OK</b></string>
    
    <!--Others-->
    <string name="rupees_symbol"><b>\u20B9</b></string>
    
</resources>
