<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android = "http://schemas.android.com/apk/res/android">
	<ListPreference
		android:key="@string/pref_key_date_format"
		android:title="@string/pref_title_date_format"
		android:summary="@string/pref_summary_date_format"
		android:entries="@array/pref_date_format_types"
		android:entryValues="@array/pref_date_format_values"
		android:defaultValue="EEE - MMM dd, yyyy"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null" />
	
	<ListPreference
		android:key="@string/pref_key_date_sort"
		android:title="@string/pref_title_date_sort"
		android:summary="@string/pref_summary_date_sort"
		android:entries="@array/pref_date_sort_types"
		android:entryValues="@array/pref_date_sort_values"
		android:defaultValue="200"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null" />
	
	<ListPreference
		android:key="@string/pref_key_group_transactions"
		android:title="@string/pref_title_group_transactions"
		android:summary="@string/pref_summary_group_transactions"
		android:entries="@array/analyze_filterBy"
		android:entryValues="@array/analyze_filterBy"
		android:defaultValue="By Month"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null" />
	
	<ListPreference
		android:key="@string/pref_key_default_group_transaction"
		android:title="@string/pref_title_default_group_transaction"
		android:summary="@string/pref_summary_default_group_transaction"
		android:entries="@array/pref_default_transaction_group_types"
		android:entryValues="@array/pref_default_transactions_group_values"
		android:defaultValue="300"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null" />
	
	<SwitchPreference
		android:key="@string/pref_key_check_account"
		android:title="@string/pref_title_check_account"
		android:summary="@string/pref_summary_check_account"
		android:defaultValue="false"/>
	
</PreferenceScreen>