<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/nick_name"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_nick_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/nick_name"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/type"
            android:textAppearance="@style/Toolbar.TitleText" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:background="@drawable/spinner_background"/>


        <TextView
            android:id="@+id/tv_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/bank_name"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_bank_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/bank_name"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/service_name"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_service_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/service_name"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/tv_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/account_number"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_account_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/account_number"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/email"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/email"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/mobile"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/mobile"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/balance"
            android:textAppearance="@style/Toolbar.TitleText" />
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:background="@color/textColorPrimary"
            android:orientation="horizontal">
        
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/size_10_dp"
                android:text="@string/rupees_symbol"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textAppearance="@style/EditText.Text"/>
        
            <EditText
                android:id="@+id/et_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:layout_gravity="center_vertical"
                android:hint="@string/balance"
                android:background="@color/textColorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textAppearance="@style/EditText.Text"/>
    
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_30_dp"
            android:layout_marginBottom="@dimen/size_30_dp">

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="@dimen/submit_btn_width"
                android:layout_height="@dimen/size_48_dp"
                android:paddingTop="@dimen/size_4_dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:background="@drawable/layout_submit_bg"
                android:textAppearance="@style/Toolbar.BTNText"
                android:layout_gravity="center_horizontal|center_vertical" />

        </RelativeLayout>
        
    </LinearLayout>


</ScrollView>