<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/category_name"
            android:textAppearance="@style/Toolbar.TitleText" />

        <EditText
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/category_name"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <TextView
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/parent"
            android:textAppearance="@style/Toolbar.TitleText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:orientation="horizontal"
            android:background="@color/textColorPrimary">

            <EditText
                android:id="@+id/et_select_parent"
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48_dp"
                android:layout_weight="8"
                android:paddingLeft="@dimen/size_10_dp"
                android:hint="@string/default_parent"
                android:background="@color/textColorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textAppearance="@style/EditText.Text"/>

            <ImageButton
                android:id="@+id/ib_cancel_parent"
                android:src="@drawable/ic_cancel_black_24dp"
                android:backgroundTint="@color/textColorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/size_48_dp"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/ib_select_parent"
                android:src="@drawable/ic_add_black_24dp"
                android:backgroundTint="@color/textColorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/size_48_dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/account"
            android:textAppearance="@style/Toolbar.TitleText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:orientation="horizontal"
            android:background="@color/textColorPrimary">

            <EditText
                android:id="@+id/et_select_account"
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48_dp"
                android:layout_weight="8"
                android:paddingLeft="@dimen/size_10_dp"
                android:hint="@string/default_account"
                android:background="@color/textColorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textAppearance="@style/EditText.Text"/>

            <ImageButton
                android:id="@+id/ib_cancel_account"
                android:src="@drawable/ic_cancel_black_24dp"
                android:backgroundTint="@color/textColorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/size_48_dp"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/ib_select_account"
                android:src="@drawable/ic_add_black_24dp"
                android:backgroundTint="@color/textColorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/size_48_dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_16_dp"
            android:text="@string/description"
            android:textAppearance="@style/Toolbar.TitleText" />


        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48_dp"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:paddingLeft="@dimen/size_10_dp"
            android:hint="@string/description"
            android:background="@color/textColorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/EditText.Text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12_dp"
            android:layout_marginRight="@dimen/size_12_dp"
            android:layout_marginTop="@dimen/size_30_dp"
            android:layout_marginBottom="@dimen/size_30_dp">

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="@dimen/submit_btn_width"
                android:layout_height="@dimen/size_48_dp"
                android:paddingTop="@dimen/size_4_dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:background="@drawable/layout_submit_bg"
                android:textAppearance="@style/Toolbar.BTNText"
                android:layout_gravity="center_horizontal|center_vertical" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>